<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ingred"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ahmed.mybakingapp.Activity.IngredActivity">


...
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingred_Recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>

